clusters/nishir/components/networkpolicies/prowlarr-allow-media.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr-allow-media
  namespace: shikanime
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shikanime
          podSelector:
            matchLabels:
              app.kubernetes.io/part-of: nishir-media
      ports:
        - protocol: TCP
          port: 9696
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - protocol: TCP
          port: 9696
  policyTypes:
    - Ingress
