clusters/nishir/components/networkpolicies/shikanime-allow-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-tailscale
  namespace: shikanime
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
  policyTypes:
    - Ingress
